--- a/encyclopedia.html
+++ b/encyclopedia.html
@@ -1,12 +1,12 @@
 <h1>THE KITCHEN ENCYCLOPEDIA</h1>
 
-_You will find many helpful
+<p>You will find many helpful
 suggestions in this book; all
-of them are tried and practical_
+of them are tried and practical</p>
 
-Twelfth Edition
-Swift & Company, U. S. A.
-Copyright, 1911, by Swift & Company
+<h2>Twelfth Edition
+    Swift & Company, U. S. A.
+    Copyright, 1911, by Swift & Company</h2>
 
 _Keep this book in your kitchen for ready reference_
 
