--- a/encyclopedia.html
+++ b/encyclopedia.html
@@ -1,16 +1,16 @@
 <h1>THE KITCHEN ENCYCLOPEDIA</h1>
 
-<p>You will find many helpful
+<h2>You will find many helpful
 suggestions in this book; all
-of them are tried and practical</p>
+of them are tried and practical</h2>
 
-<h2>Twelfth Edition
-    Swift & Company, U. S. A.
-    Copyright, 1911, by Swift & Company</h2>
+<h3>Twelfth Edition
+    <p>Swift & Company, U. S. A.</p>
+    <p>Copyright, 1911, by Swift & Company</p></h3>
 
-_Keep this book in your kitchen for ready reference_
+<p>Keep this book in your kitchen for ready reference</p>
 
-Recipes
+<h4>Recipes</h4>
 
   You can make exactly as good cakes, pies, cookies, and candies by
       substituting for the butter named in your recipes 3/4 the
