--- a/encyclopedia.html
+++ b/encyclopedia.html
@@ -12,33 +12,41 @@ of them are tried and practical</h2>
 
 <h4>Recipes</h4>
 
-  You can make exactly as good cakes, pies, cookies, and candies by
-      substituting for the butter named in your recipes 3/4 the
-      quantity of Swift's Premium Oleomargarine. On this and the
-      following pages are a few recipes in which this substitution has
-      been made. Try them. You will find them good and more economical
-      than when made with butter.
+  <p>You can make exactly as good cakes, pies, cookies, and candies by
+    substituting for the butter named in your recipes 3/4 the
+    quantity of Swift's Premium Oleomargarine. On this and the
+    following pages are a few recipes in which this substitution has
+    been made. Try them. You will find them good and more economical
+    than when made with butter.</p>
 
-  You may have some favorite recipes that are too expensive on account
-      of the large amount of butter required. You can reduce their cost
-      by using Swift's Premium Oleomargarine.
+  <p>You may have some favorite recipes that are too expensive on account
+    of the large amount of butter required. You can reduce their cost
+    by using Swift's Premium Oleomargarine.</p>
 
 
-Loaf Fig Cake
+<h4>Loaf Fig Cake</h4>
 
-Light Part
+<p>Light Part</p>
 
-  1/2 cupful Swift's Premium Oleomargarine
-  1/2 cupful sweet milk
-  1-1/2 teaspoonfuls baking-powder
-  1 cupful sugar
-  1-1/2 cupfuls flour
-  1 teaspoonful vanilla
-  Whites of 4 eggs
+  <ul>
+    <li>1/2 cupful Swift's Premium Oleomargarine</li>
+    <li>1/2 cupful sweet milk</li>
+    <li>1-1/2 teaspoonfuls baking-powder</li>
+    <li>1 cupful sugar</li>
+    <li>1-1/2 cupfuls flour</li>
+    <li>1 teaspoonful vanilla</li>
+    <li>Whites of 4 eggs</li>
+  </ul>
+  
 
-  Cream the oleomargarine and sugar. Add the milk, with which the
-      vanilla has been mixed. Sift the baking-powder with the flour and
-      add gradually. Add the whites, well beaten, last.
+  <ol>
+    <li>Cream the oleomargarine and sugar.</li> 
+    <li>Add the milk, with which the
+        vanilla has been mixed.</li> 
+    <li>Sift the baking-powder with the flour and
+        add gradually.</li> 
+    <li>Add the whites, well beaten, last.</li>
+</ol>
 
 Dark Part
 
