--- a/encyclopedia.html
+++ b/encyclopedia.html
@@ -48,24 +48,33 @@ of them are tried and practical</h2>
     <li>Add the whites, well beaten, last.</li>
 </ol>
 
-Dark Part
+<h4>Dark Part</h4>
 
-  1/2 cupful Swift's Premium Oleomargarine
-  3/4 cupful milk
-  1-1/2 teaspoonfuls baking-powder
-  Yolks of 4 eggs
-  1/2 pound of raisins
-  1-1/2 cupfuls sugar
-  3 cupfuls flour
-  1 dessertspoonful each of cinnamon, cloves, allspice, and nutmeg
-  1 pound of figs
-
-  Cream the oleomargarine and sugar. Add the egg-yolks, well beaten,
-      then the milk. Sift the baking-powder and spices with the flour
-      and add gradually. The raisins should be seeded and dredged with
-      flour, and the figs should be cut in small pieces and dredged
-      with flour and added to the batter the last thing. Put in the pan
-      alternate layers of each part and bake in a loaf.
+  <ul>
+    <li>1/2 cupful Swift's Premium Oleomargarine</li>
+    <li>3/4 cupful milk</li>
+    <li>1-1/2 teaspoonfuls baking-powder</li>
+    <li>Yolks of 4 eggs</li>
+    <li>1/2 pound of raisins</li>
+    <li>1-1/2 cupfuls sugar</li>
+    <li>3 cupfuls flour</li>
+    <li>1 dessertspoonful each of cinnamon, cloves, allspice, and nutmeg</li>
+    <li>1 pound of figs</li>
+  </ul>
+  
+  <ol>
+    <li>Cream the oleomargarine and sugar.</li> 
+    <li>Add the egg-yolks, well beaten,
+        then the milk.</li> 
+    <li>Sift the baking-powder and spices with the flour
+        and add gradually.</li> 
+    <li>The raisins should be seeded and dredged with
+        flour, and the figs should be cut in small pieces and dredged
+        with flour and added to the batter the last thing. </li>
+    <li>Put in the pan
+        alternate layers of each part and bake in a loaf.</li>
+  </ol>
+  
       
   Sugar Cookies
 
