--- a/encyclopedia.html
+++ b/encyclopedia.html
@@ -48,7 +48,7 @@ of them are tried and practical</h2>
     <li>Add the whites, well beaten, last.</li>
 </ol>
 
-<h4>Dark Part</h4>
+<p>Dark Part</p>
 
   <ul>
     <li>1/2 cupful Swift's Premium Oleomargarine</li>
@@ -76,19 +76,28 @@ of them are tried and practical</h2>
   </ol>
   
       
-  Sugar Cookies
+  <h4>Sugar Cookies</h4>
 
-  1 cupful Swift's Premium Oleomargarine
-  1 cupful sour milk
-  1 teaspoonful soda
-  2 cupfuls sugar
-  3 eggs, well beaten
-  Flavoring to taste
-  Flour enough to roll out thin
-
-  Cream the oleomargarine and sugar. Add the eggs, whites and yolks
-      beaten together. Dissolve the soda in the sour milk. Add this and
-      then the flour. Roll out thin. Just before cutting out the
-      cookies sift granulated sugar on top and roll it in slightly,
-      then cut out cookies with cookie-cutter and bake in a moderate
-      oven.
+  <ul>
+    <li>1 cupful Swift's Premium Oleomargarine</li>
+    <li>1 cupful sour milk</li>
+    <li>1 teaspoonful soda</li>
+    <li>2 cupfuls sugar</li>
+    <li>3 eggs, well beaten</li>
+    <li>Flavoring to taste</li>
+    <li>Flour enough to roll out thin</li>
+   </ul>
+  
+  <ol>
+    <li>Cream the oleomargarine and sugar. 
+        Add the eggs, whites and yolks
+        beaten together.</li> 
+    <li>Dissolve the soda in the sour milk. Add this and
+        then the flour.</li> 
+    <li>Roll out thin.</li> 
+    <li>Just before cutting out the
+        cookies sift granulated sugar on top and roll it in slightly,
+        then cut out cookies with cookie-cutter and bake in a moderate
+        oven.</li>
+  </ol>
+  
